# heliomed

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: a8bd65db3b7d_initial.py  b697f3177e05_add_users_table.py  c1a2b3d4e5f6_fix_users_created_at_timezone.py  d2e3f4a5b6c7_add_chat_consultation_context.py  e3f4a5b6c7d8_add_title_summary_keypoints.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  consultations.py  pharmacies.py  prescriptions.py  router.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  chat_message.py  consultation.py  prescription.py  user.py  user_profile.py
backend/app/schemas/: auth.py  chat.py  consultation.py  pharmacy.py  prescription.py  user.py
backend/app/services/: chat_agent.py  image_analysis_agent.py  pharmacy_lookup.py  prescription_agent.py  summary_agent.py  title_agent.py  transcription.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/Button/: Button.jsx  Button.module.css
frontend/src/components/Card/: Card.jsx  Card.module.css
frontend/src/components/ChatBubble/: ChatBubble.jsx  ChatBubble.module.css
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useGeolocation.js  useRecording.js
frontend/src/pages/Home/: Home.jsx  (+1 more)
frontend/src/services/: api.js
frontend/src/styles/: global.css  variables.css
(+32 files in other folders)
